feat: Added support for PingEvents for each platform